--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ button:active {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     padding: 12px;
+    align-items:center;
   }
   main h2 {
     font-size: 16px;
