--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ main {
   width: 100%;
   height: 100%;
   padding: 20px;
+  justify-items: center;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   border-radius: 10px;
@@ -229,7 +230,7 @@ button:active {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     padding: 12px;
-    align-content: space-evenly;
+    justify-items: center;
   }
   main h2 {
     font-size: 16px;
