--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ main {
   width: 100%;
   height: 100%;
   padding: 20px;
-  justify-items: center;
+  align-items: center;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   border-radius: 10px;
