--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ main {
   width: 100%;
   height: 100%;
   padding: 20px;
-  align-self: center;
+  align-content: center;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   border-radius: 10px;
@@ -230,7 +230,7 @@ button:active {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     padding: 12px;
-    justify-items: center;
+    align-content: center;
   }
   main h2 {
     font-size: 16px;
